# AutomatedProbeCreation

./: .gitignore  .gitmodules  PAIR-example.ipynb  dataset-curation.ipynb  huggingface-testing.ipynb  jailbreak-generation-testing.ipynb  jailbreak-testing-across-models.ipynb  jailbreak_agent.py  llm.py  main.py  parsing_agent.py  probe-testing.ipynb  probe.py  prompts.py  run_jailbreak_experiments.py  smoke_test.py  test_gpt_oss_prompt_format.py  visualization.py  visualize_jailbreak_results.py
sae-usage/: README.md  config.yaml  config_test.yaml  main.py  neuronpedia_explanation.json  pyproject.toml  temp.py  test.py
sae-usage/src/: data_generator.py  degeneracy_detector.py  goodfire_client.py  interactive_checkpoints.py  llm_agent.py  model_manager.py  neuronpedia_client.py  on_policy_generator.py  probe_trainer.py  prompts.py  quality_validator.py  sae_manager.py  utils.py
wiki-testing/: agents.py  get_wiki_data.py  main.py  neuronpedia.py  pipeline.py  prompts.py  pyproject.toml  scenarios.py
wiki-testing/frontend/: app.py  archived_features.json  categories.json  feature_categories.json  feature_set.json  invalid_runs.json  pipeline_config.json  pipeline_jobs.json  pipeline_scenarios.json  review_queue.json  scenario_bank.json  scenarios.json  starred_runs.json  training_data.json  training_datasets.json
wiki-testing/runs/: 20251226_143914_llama3.1-8b-it_L11_117440.json  20251226_153007_llama3.1-8b-it_L11_117440.json  20251226_153344_llama3.1-8b-it_L11_117440.json  20251226_153654_llama3.1-8b-it_L11_117440.json  20251226_154211_llama3.1-8b-it_L19_56479.json  (+50 more)
(+137 files in other folders)
